--- a/store/app/views/products/_form.html.erb
+++ b/store/app/views/products/_form.html.erb
@@ -15,8 +15,8 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :price_in_cents %><br />
-    <%= f.text_field :price_in_cents %>
+    <%= f.label :price_in_dollars %><br />
+    <%= f.text_field :price_in_dollars %>
   </div>
   <div class="field">
     <%= f.label :released_at, "Release Date & Time" %><br />
