make released_at a text field

--- a/store/app/views/products/_form.html.erb
+++ b/store/app/views/products/_form.html.erb
@@ -19,8 +19,8 @@
     <%= f.text_field :price_in_dollars %>
   </div>
   <div class="field">
-    <%= f.label :released_at, "Release Date & Time" %><br />
-    <%= f.datetime_select :released_at %>
+    <%= f.label :released_at_text, "Release Date & Time" %><br />
+    <%= f.text_field :released_at_text %>
   </div>
   <div class="field">
     <%= f.label :category_id %><br />
